# kraft_engine

./: .clang-format  .gitignore  .gitmodules  Build.bat  BuildAndRun.bat  BuildShaders.bat  CMakeLists.txt  Configure.bat  LICENSE  README.md
editor/: CMakeLists.txt
editor/src/: editor.cpp  editor.h  main.cpp  utils.h  widgets.cpp  widgets.h
kraft/: CMakeLists.txt
kraft/cmake/: kraft_helpers.cmake
kraft/src/: kraft.cpp  kraft.h  kraft_includes.h  kraft_types.h  shader.h  util.h
kraft/src/containers/: array.h  kraft_array.cpp  kraft_array.h  kraft_buffer.cpp  kraft_buffer.h  kraft_carray.cpp  kraft_carray.h  kraft_chunked_array.h  kraft_containers_includes.cpp  kraft_containers_includes.h  kraft_hashmap.h  kraft_ringbuffer.h
kraft/src/containers/ExcaliburHash/: ExcaliburHash.h  ExcaliburKeyInfo.h
kraft/src/core/: kraft_allocators.cpp  kraft_allocators.h  kraft_application.cpp  kraft_application.h  kraft_asserts.cpp  kraft_asserts.h  kraft_base_includes.cpp  kraft_base_includes.h  kraft_buffer.h  kraft_core.cpp  kraft_core.h  kraft_engine.cpp  kraft_engine.h  kraft_events.cpp  kraft_events.h  kraft_hash.cpp  kraft_hash.h  kraft_imgui.h  kraft_input.cpp  kraft_input.h  kraft_lexer.cpp  kraft_lexer.h  kraft_lexer_types.h  kraft_log.cpp  kraft_log.h  kraft_main.h  kraft_math.cpp  kraft_math.h  kraft_memory.cpp  kraft_memory.h  kraft_string.cpp  kraft_string.h  kraft_string_utils.h  kraft_string_view.cpp  kraft_string_view.h  kraft_strings.cpp  kraft_strings.h  kraft_thread_context.cpp  kraft_thread_context.h  kraft_time.cpp  (+1 more)
kraft/src/math/: kraft_math.cpp  kraft_math.h
kraft/src/misc/: kraft_csv_parser.h  kraft_misc_includes.h
kraft/src/platform/: kraft_filesystem.cpp  kraft_filesystem.h  kraft_filesystem_types.h  kraft_platform.h  kraft_platform_common.cpp  kraft_platform_includes.cpp  kraft_platform_includes.h  kraft_window.cpp  kraft_window.h  kraft_window_types.h
kraft/src/platform/linux/: kraft_linux.cpp  kraft_linux_types.h
kraft/src/platform/macos/: kraft_macos.h  kraft_macos.mm  kraft_macos_types.h
kraft/src/platform/windows/: kraft_win32.cpp  kraft_win32_filesystem.cpp  kraft_win32_types.h
kraft/src/renderer/: kraft_camera.cpp  kraft_camera.h  kraft_debug_camera.h  kraft_renderer_backend.cpp  kraft_renderer_backend.h  kraft_renderer_frontend.cpp  kraft_renderer_frontend.h  kraft_renderer_imgui.cpp  kraft_renderer_imgui.h  kraft_renderer_includes.cpp  kraft_renderer_includes.h  kraft_renderer_types.h  kraft_resource_manager.cpp  kraft_resource_manager.h  kraft_resource_pool.cpp  kraft_resource_pool.inl  kraft_scene_renderer.cpp  kraft_scene_renderer.h  kraft_slug_text_renderer.cpp  kraft_slug_text_renderer.h  kraft_text_renderer.cpp  kraft_text_renderer.h
kraft/src/renderer/renderables/: kraft_gameobject.cpp
kraft/src/renderer/shaderfx/: kraft_shaderfx.cpp  kraft_shaderfx.h  kraft_shaderfx_types.h
kraft/src/renderer/vulkan/: kraft_vulkan_backend.cpp  kraft_vulkan_backend.h  kraft_vulkan_buffer.cpp  kraft_vulkan_buffer.h  kraft_vulkan_command_buffer.cpp  kraft_vulkan_command_buffer.h  kraft_vulkan_device.cpp  kraft_vulkan_device.h  kraft_vulkan_fence.cpp  kraft_vulkan_fence.h  kraft_vulkan_framebuffer.cpp  kraft_vulkan_framebuffer.h  kraft_vulkan_helpers.cpp  kraft_vulkan_helpers.h  kraft_vulkan_image.cpp  kraft_vulkan_image.h  kraft_vulkan_imgui.cpp  kraft_vulkan_imgui.h  kraft_vulkan_includes.cpp  kraft_vulkan_includes.h  kraft_vulkan_index_buffer.cpp  kraft_vulkan_index_buffer.h  kraft_vulkan_memory.h  kraft_vulkan_pipeline.cpp  kraft_vulkan_pipeline.h  kraft_vulkan_renderpass.cpp  kraft_vulkan_renderpass.h  kraft_vulkan_resource_manager.cpp  kraft_vulkan_resource_manager.h  kraft_vulkan_shader.cpp  kraft_vulkan_shader.h  kraft_vulkan_surface.cpp  kraft_vulkan_surface.h  kraft_vulkan_swapchain.cpp  kraft_vulkan_swapchain.h  kraft_vulkan_texture.cpp  kraft_vulkan_texture.h  kraft_vulkan_types.h  kraft_vulkan_vertex_buffer.cpp  kraft_vulkan_vertex_buffer.h  (+1 more)
kraft/src/renderer/vulkan/tests/: simple_scene.cpp  simple_scene.h
kraft/src/resources/: kraft_resource_types.h
kraft/src/shaderfx/: kraft_shaderfx.cpp  kraft_shaderfx.h  kraft_shaderfx_includes.cpp  kraft_shaderfx_includes.h  kraft_shaderfx_types.h
kraft/src/systems/: kraft_asset_database.cpp  kraft_asset_database.h  kraft_asset_types.h  kraft_geometry_system.cpp  kraft_geometry_system.h  kraft_material_system.cpp  kraft_material_system.h  kraft_material_system_types.h  kraft_shader_system.cpp  kraft_shader_system.h  kraft_systems_includes.cpp  kraft_systems_includes.h  kraft_texture_system.cpp  kraft_texture_system.h
kraft/src/world/: kraft_components.cpp  kraft_components.h  kraft_entity.cpp  kraft_entity.h  kraft_entity_types.h  kraft_world.cpp  kraft_world.h  kraft_world_includes.cpp  kraft_world_includes.h
notes/: NOTES.md
res/materials/: simple_2d.kmt  simple_2d_wireframe.kmt  simple_3d.kmt
res/meshes/: chair.fbx
res/shaders/: basic.kfx  basic.kfx.bkfx  basic_2d.kfx  basic_2d.kfx.bkfx  combined.shader  fragment.frag  object_picking.kfx  object_picking.kfx.bkfx  vertex.vert  wireframe.kfx  wireframe.kfx.bkfx
res/textures/: Credits.txt
sample_app/: CMakeLists.txt
sample_app/src/: main.cpp
src/: include.h  main.cpp  math.cpp  math.h  shader.cpp  shader.h  texture.cpp  texture.h
src/containers/: array.cpp  array.h  kraft_array.h
src/core/: kraft_application.cpp  kraft_application.h  kraft_asserts.h  kraft_core.h  kraft_events.cpp  kraft_events.h  kraft_input.cpp  kraft_input.h  kraft_log.cpp  kraft_log.h  kraft_main.h  kraft_memory.cpp  kraft_memory.h  kraft_string.cpp  kraft_string.h  kraft_string_view.h  kraft_time.cpp  kraft_time.h
testbed/: CMakeLists.txt
testbed/src/: main.cpp  utils.h  widgets.cpp  widgets.h
testbed/src/editor/: gizmos.cpp  gizmos.h
testbed/src/scenes/: scene_types.h  simple_scene.cpp  simple_scene.h  test.cpp
text_drawing/: CMakeLists.txt  points_reduction.py
tools/: compile_shaders  compile_shaders.bat  generate_compile_commands.py
tools/shader_compiler/: Build.bat  CMakeLists.txt
tools/shader_compiler/src/: main.cpp
(+105 files in other folders)
